--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,21 @@
             <artifactId>commons-validator</artifactId>
             <version>1.7</version>
         </dependency>
+        <dependency>
+            <groupId>com.sikejava.framework.parent</groupId>
+            <artifactId>maven-plugin-parent</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sikejava.framework.parent</groupId>
+            <artifactId>sk-maven-parent</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.gantsign.parent</groupId>
+            <artifactId>kotlin-parent</artifactId>
+            <version>3.4.1</version>
+        </dependency>
 
     </dependencies>
 </project>
